{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 29,
  "lineage": "06e56ce5-c72e-d5b4-e72c-11fe24f8fcc2",
  "resources": [
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c25c5e3105d1409",
            "arn": "arn:aws:ec2:ap-south-1:132398229882:elastic-ip/eipalloc-00c25c5e3105d1409",
            "domain": "vpc",
            "id": "eipalloc-00c25c5e3105d1409",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-205-28-106.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.205.28.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-nat-gw",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-nat-gw",
              "Terraformed": "True"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c25c5e3105d1409",
            "association_id": "eipassoc-0eb66cbd39d6204df",
            "connectivity_type": "public",
            "id": "nat-059b4e871579fcc82",
            "network_interface_id": "eni-0be04d76cf7042d91",
            "private_ip": "10.0.1.188",
            "public_ip": "13.205.28.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0085a21c8eaf80263",
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-nat-gw",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-nat-gw",
              "Terraformed": "True"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_eip.nat_eip",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:route-table/rtb-05357bfe67973004c",
            "id": "rtb-05357bfe67973004c",
            "owner_id": "132398229882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059b4e871579fcc82",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-private-rt",
              "SubnetType": "Private",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-private-rt",
              "SubnetType": "Private",
              "Terraformed": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_eip.nat_eip",
            "module.subnet.aws_nat_gateway.nat_gateway",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:route-table/rtb-02dd4522d4f1981fa",
            "id": "rtb-02dd4522d4f1981fa",
            "owner_id": "132398229882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0879cbb7ac006abf1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-public-rt",
              "SubnetType": "Public",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-public-rt",
              "SubnetType": "Public",
              "Terraformed": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033265cb9dfccd313",
            "route_table_id": "rtb-05357bfe67973004c",
            "subnet_id": "subnet-0bc8ca28c2a0b3f9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_eip.nat_eip",
            "module.subnet.aws_nat_gateway.nat_gateway",
            "module.subnet.aws_route_table.private_subnet_route_table",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e9da96203f1d7fd",
            "route_table_id": "rtb-05357bfe67973004c",
            "subnet_id": "subnet-022b5d573305e0e9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_eip.nat_eip",
            "module.subnet.aws_nat_gateway.nat_gateway",
            "module.subnet.aws_route_table.private_subnet_route_table",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033eeb79d16b425aa",
            "route_table_id": "rtb-02dd4522d4f1981fa",
            "subnet_id": "subnet-0085a21c8eaf80263"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_route_table.public_subnet_route_table",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ca5a640523488f7",
            "route_table_id": "rtb-02dd4522d4f1981fa",
            "subnet_id": "subnet-02811257b3fabf464"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_route_table.public_subnet_route_table",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_for_vpc_interface_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:security-group/sg-073d00059fdee05fa",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-073d00059fdee05fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow traffic on port 443 ",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sharadha-dev-us-vpc-interface-endpoints",
            "name_prefix": "",
            "owner_id": "132398229882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-vpc-interface-endpoints",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-vpc-interface-endpoints",
              "Terraformed": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:security-group/sg-0b0b13e02444de42b",
            "description": "Associated to ECR/s3 VPC Endpoints",
            "egress": [],
            "id": "sg-0b0b13e02444de42b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Nodes to pull images from ECR via VPC endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sharadha-dev-us-vpc-endpoints-sg20251218180609580900000002",
            "name_prefix": "sharadha-dev-us-vpc-endpoints-sg",
            "owner_id": "132398229882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-vpc-interface-endpoints-sg",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-vpc-interface-endpoints-sg",
              "Terraformed": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:subnet/subnet-0bc8ca28c2a0b3f9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc8ca28c2a0b3f9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132398229882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-private-subnet-1",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-private-subnet-1",
              "Terraformed": "True"
            },
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:subnet/subnet-022b5d573305e0e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b5d573305e0e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "132398229882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-private-subnet-2",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-private-subnet-2",
              "Terraformed": "True"
            },
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:subnet/subnet-0085a21c8eaf80263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0085a21c8eaf80263",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132398229882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-public-subnet-1",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-public-subnet-1",
              "Terraformed": "True"
            },
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:subnet/subnet-02811257b3fabf464",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02811257b3fabf464",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "132398229882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-public-subnet-2",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-public-subnet-2",
              "Terraformed": "True"
            },
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:vpc-endpoint/vpce-00b60ae8882e50ff3",
            "dns_entry": [
              {
                "dns_name": "vpce-00b60ae8882e50ff3-1e2zpf67.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00b60ae8882e50ff3-1e2zpf67-ap-south-1b.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-00b60ae8882e50ff3-1e2zpf67-ap-south-1a.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "api.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z01708083QAQ7S4055CB7"
              },
              {
                "dns_name": "ecr.ap-south-1.api.aws",
                "hosted_zone_id": "Z0170815RKUAJFZ52ATO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00b60ae8882e50ff3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0167e739cd77264c2",
              "eni-07814bc106d2ac34a"
            ],
            "owner_id": "132398229882",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b0b13e02444de42b"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.api",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.225",
                "subnet_id": "subnet-0bc8ca28c2a0b3f9a"
              },
              {
                "ipv4": "10.0.4.95",
                "subnet_id": "subnet-022b5d573305e0e9b"
              }
            ],
            "subnet_ids": [
              "subnet-022b5d573305e0e9b",
              "subnet-0bc8ca28c2a0b3f9a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-ecr-vpc-endpoint",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-ecr-vpc-endpoint",
              "Terraformed": "True"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_security_group.vpc_endpoints_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:vpc-endpoint/vpce-0b5bd4200eef92c41",
            "dns_entry": [
              {
                "dns_name": "vpce-0b5bd4200eef92c41-1nahz85l.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b5bd4200eef92c41-1nahz85l-ap-south-1b.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b5bd4200eef92c41-1nahz85l-ap-south-1a.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z03806901V3X7CHG6K64H"
              },
              {
                "dns_name": "*.dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z03806901V3X7CHG6K64H"
              },
              {
                "dns_name": "dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z099461611N7X6QAIA2AU"
              },
              {
                "dns_name": "*.dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z099461611N7X6QAIA2AU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b5bd4200eef92c41",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-068328d102e871383",
              "eni-08aca125c5136d88f"
            ],
            "owner_id": "132398229882",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b0b13e02444de42b"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.dkr",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.206",
                "subnet_id": "subnet-0bc8ca28c2a0b3f9a"
              },
              {
                "ipv4": "10.0.4.253",
                "subnet_id": "subnet-022b5d573305e0e9b"
              }
            ],
            "subnet_ids": [
              "subnet-022b5d573305e0e9b",
              "subnet-0bc8ca28c2a0b3f9a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-docker-vpc-endpoint",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-docker-vpc-endpoint",
              "Terraformed": "True"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_security_group.vpc_endpoints_sg",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "gateway_endpoint_for_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:vpc-endpoint/vpce-0a472066fe4fd115c",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a472066fe4fd115c",
            "ip_address_type": "ipv4",
            "owner_id": "132398229882",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-s3-gateway-endpoint",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "sharadha-dev-us-s3-gateway-endpoint",
              "Terraformed": "True"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:internet-gateway/igw-0879cbb7ac006abf1",
            "id": "igw-0879cbb7ac006abf1",
            "owner_id": "132398229882",
            "tags": {
              "Environment": "dev",
              "Name": "Sharadha-dev-us-vpc",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Sharadha-dev-us-vpc",
              "Terraformed": "True"
            },
            "vpc_id": "vpc-04da23ef158304f92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:132398229882:vpc/vpc-04da23ef158304f92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081db5b4f889a7e29",
            "default_route_table_id": "rtb-044c21c3ecb38195b",
            "default_security_group_id": "sg-0c5c1279ca398b764",
            "dhcp_options_id": "dopt-005655a35d635f15e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04da23ef158304f92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044c21c3ecb38195b",
            "owner_id": "132398229882",
            "tags": {
              "Environment": "dev",
              "Name": "Sharadha-dev-us-vpc",
              "Terraformed": "True"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Sharadha-dev-us-vpc",
              "Terraformed": "True"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}